<resources>
    <string name="app_name">sampleModernDashboardUI</string>
    <string name="my_apps">My Apps</string>
    <string name="dummy_text">Lorem ipsum is simple dummy text of the printing</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="exercises">Exercises</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
</resources>