<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/my_apps"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/dummy_text"
                android:textColor="@color/colorLightText"
                android:textSize="15sp"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dash_item_1_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/ivIcon1"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/clock"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem1Title"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="80dp"
                            android:text="@string/diet_chart"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivIcon1"
                            app:layout_constraintTop_toTopOf="@id/ivIcon1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem1Desc"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/tvItem1Title"
                            app:layout_constraintStart_toStartOf="@id/tvItem1Title"
                            app:layout_constraintTop_toBottomOf="@id/tvItem1Title"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dash_item_2_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/ivIcon2"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/clock"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem2Title"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="80dp"
                            android:text="@string/exercises"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivIcon2"
                            app:layout_constraintTop_toTopOf="@id/ivIcon2"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem2Desc"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/tvItem2Title"
                            app:layout_constraintStart_toStartOf="@id/tvItem2Title"
                            app:layout_constraintTop_toBottomOf="@id/tvItem2Title"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dash_item_3_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/ivIcon3"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/clock"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem3Title"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="80dp"
                            android:text="@string/meditation"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivIcon3"
                            app:layout_constraintTop_toTopOf="@id/ivIcon3"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem3Desc"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/tvItem3Title"
                            app:layout_constraintStart_toStartOf="@id/tvItem3Title"
                            app:layout_constraintTop_toBottomOf="@id/tvItem3Title"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dash_item_4_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/ivIcon4"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/clock"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem4Title"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="80dp"
                            android:text="@string/yoga"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivIcon4"
                            app:layout_constraintTop_toTopOf="@id/ivIcon4"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvItem4Desc"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/dummy_text"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/tvItem4Title"
                            app:layout_constraintStart_toStartOf="@id/tvItem4Title"
                            app:layout_constraintTop_toBottomOf="@id/tvItem4Title"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAppBar"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorAccent"
        app:fabCradleMargin="8dp"
        app:fabCradleVerticalOffset="6dp"
        app:fabCradleRoundedCornerRadius="30dp"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        app:menu="@menu/bottom_menu"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@+id/btnAppBar"
        app:maxImageSize="30dp"
        app:tint="@color/colorWhite"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>